# personal-news

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: llm.rs  main.rs  models.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  styles.css
